@@ -1,7 +1,8 @@
 libcontentaction (0.1.27~unreleased) unstable; urgency=low
 
   * Fixes: NB#192179
-
+  * Merging the highlighter tool hl1 into lca-tool (lca-tool --highlight)
+  
  -- Marja Hassinen <marja.hassinen@nokia.com>  Wed, 15 Sep 2010 13:45:00 +0300
 
 libcontentaction (0.1.26) unstable; urgency=low
